# libocean

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  libocean-dummy.pc.in  libocean.pc.in
include/: Makefile.am  libocean.h
src/: Makefile.am  libocean_p.h  ocean-common.c  ocean-dummy.c  ocean-nirquest.c  ocean-usb4000.c
tests/: Makefile.am  main.c
